--- a/templates/partials/user_sidebar.html
+++ b/templates/partials/user_sidebar.html
@@ -13,9 +13,9 @@
   </a>
 
 
-    <a class="{{ 'active' if active_page == 'integrations' else '' }}"
+    <a class="{{ 'active' if active_page == 'tools' else '' }}"
      href="{{ url_for('dashboard.user_integrations') }}">
-     Integrations
+     Tools
   </a>
 
 
